--- a/src/vista/FrmRegistraIncidenteC.form
+++ b/src/vista/FrmRegistraIncidenteC.form
@@ -286,11 +286,20 @@
           <Font name="Tahoma" size="12" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="San Juan"/>
-            <StringItem index="1" value="El Ejido"/>
-            <StringItem index="2" value="San Bartolo"/>
-            <StringItem index="3" value=" "/>
+          <StringArray count="13">
+            <StringItem index="0" value="La Merced"/>
+            <StringItem index="1" value="San Roque"/>
+            <StringItem index="2" value="La Victoria"/>
+            <StringItem index="3" value="San Diego"/>
+            <StringItem index="4" value="Gonz&#xe1;lez Su&#xe1;rez"/>
+            <StringItem index="5" value="San Sebasti&#xe1;n"/>
+            <StringItem index="6" value="Panecillo"/>
+            <StringItem index="7" value="San Blas"/>
+            <StringItem index="8" value="La Tola"/>
+            <StringItem index="9" value="San Marcos"/>
+            <StringItem index="10" value="La Loma"/>
+            <StringItem index="11" value="La Recoleta"/>
+            <StringItem index="12" value="La Sena"/>
           </StringArray>
         </Property>
       </Properties>
